test/regress/regress-11.txt
;;; ERROR: 1
(module
  (func (result i32)
    block (result i32)
      block
        unreachable
        br_if 1
      end
      i32.const 1
    end))
(;; STDERR ;;;
out/test/regress/regress-11.txt:7:9: error: type stack at end of block is 1, expected 0
        br_if 1
        ^^^^^^^
;;; STDERR ;;)
